[package]
name = "SimpleProxy"
version = "0.1.0"
authors = ["RootOperator <20143055+RootOperator@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0"
futures = "0.3.13"
chrono = { version = "0.4.19", features=["serde"] }
regex = { version = "1.4.4", optional = true }
serde_regex = {version = "1.1.0", optional = true }
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"
rand = { version = "0.8.3", features = ["small_rng"] }
http = "0.2.1"
tokio = { version = "0.2", features = ["macros"] }